--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "sass": "^1.55.0",
     "three": "^0.145.0",
     "valtio": "^1.7.2",
